1.6/_sources/modules/generated/sklearn.multioutput.MultiOutputClassifier.rst.txt
MultiOutputClassifier
=====================

.. currentmodule:: sklearn.multioutput

.. autoclass:: MultiOutputClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multioutput.MultiOutputClassifier sklearn.multioutput.MultiOutputClassifier.__init__ sklearn.multioutput.MultiOutputClassifier.fit sklearn.multioutput.MultiOutputClassifier.get_metadata_routing sklearn.multioutput.MultiOutputClassifier.get_params sklearn.multioutput.MultiOutputClassifier.partial_fit sklearn.multioutput.MultiOutputClassifier.predict sklearn.multioutput.MultiOutputClassifier.predict_proba sklearn.multioutput.MultiOutputClassifier.score sklearn.multioutput.MultiOutputClassifier.set_fit_request sklearn.multioutput.MultiOutputClassifier.set_params sklearn.multioutput.MultiOutputClassifier.set_partial_fit_request 
   :add-heading: Gallery examples
   :heading-level: -