1.7/_sources/modules/generated/sklearn.multioutput.MultiOutputClassifier.rst.txt
MultiOutputClassifier
=====================

.. currentmodule:: sklearn.multioutput

.. autoclass:: MultiOutputClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multioutput.MultiOutputClassifier sklearn.multioutput.MultiOutputClassifier.__delattr__ sklearn.multioutput.MultiOutputClassifier.__dir__ sklearn.multioutput.MultiOutputClassifier.__eq__ sklearn.multioutput.MultiOutputClassifier.__format__ sklearn.multioutput.MultiOutputClassifier.__ge__ sklearn.multioutput.MultiOutputClassifier.__getattribute__ sklearn.multioutput.MultiOutputClassifier.__getstate__ sklearn.multioutput.MultiOutputClassifier.__gt__ sklearn.multioutput.MultiOutputClassifier.__hash__ sklearn.multioutput.MultiOutputClassifier.__init__ sklearn.multioutput.MultiOutputClassifier.__init_subclass__ sklearn.multioutput.MultiOutputClassifier.__le__ sklearn.multioutput.MultiOutputClassifier.__lt__ sklearn.multioutput.MultiOutputClassifier.__ne__ sklearn.multioutput.MultiOutputClassifier.__new__ sklearn.multioutput.MultiOutputClassifier.__reduce__ sklearn.multioutput.MultiOutputClassifier.__reduce_ex__ sklearn.multioutput.MultiOutputClassifier.__repr__ sklearn.multioutput.MultiOutputClassifier.__setattr__ sklearn.multioutput.MultiOutputClassifier.__setstate__ sklearn.multioutput.MultiOutputClassifier.__sizeof__ sklearn.multioutput.MultiOutputClassifier.__sklearn_clone__ sklearn.multioutput.MultiOutputClassifier.__sklearn_tags__ sklearn.multioutput.MultiOutputClassifier.__str__ sklearn.multioutput.MultiOutputClassifier.__subclasshook__ sklearn.multioutput.MultiOutputClassifier._build_request_for_signature sklearn.multioutput.MultiOutputClassifier._check_predict_proba sklearn.multioutput.MultiOutputClassifier._get_default_requests sklearn.multioutput.MultiOutputClassifier._get_doc_link sklearn.multioutput.MultiOutputClassifier._get_metadata_request sklearn.multioutput.MultiOutputClassifier._get_param_names sklearn.multioutput.MultiOutputClassifier._get_params_html sklearn.multioutput.MultiOutputClassifier._html_repr sklearn.multioutput.MultiOutputClassifier._repr_html_inner sklearn.multioutput.MultiOutputClassifier._repr_mimebundle_ sklearn.multioutput.MultiOutputClassifier._validate_params sklearn.multioutput.MultiOutputClassifier.fit sklearn.multioutput.MultiOutputClassifier.get_metadata_routing sklearn.multioutput.MultiOutputClassifier.get_params sklearn.multioutput.MultiOutputClassifier.partial_fit sklearn.multioutput.MultiOutputClassifier.predict sklearn.multioutput.MultiOutputClassifier.predict_proba sklearn.multioutput.MultiOutputClassifier.score sklearn.multioutput.MultiOutputClassifier.set_fit_request sklearn.multioutput.MultiOutputClassifier.set_params sklearn.multioutput.MultiOutputClassifier.set_partial_fit_request 
   :add-heading: Gallery examples
   :heading-level: -